[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/SHOWG.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://images/MiniGameJam - Colors/misc sprites/playerelfstand.png" type="Texture" id=2]
[ext_resource path="res://UI/podium.gd" type="Script" id=3]
[ext_resource path="res://sound_effects/point.ogg" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[node name="podium" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="CenterContainer" type="CenterContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Jingle" type="TextureRect" parent="ColorRect/CenterContainer"]
margin_left = 720.0
margin_top = 230.0
margin_right = 1200.0
margin_bottom = 850.0
rect_min_size = Vector2( 480, 620 )
texture = ExtResource( 2 )
expand = true

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/CenterContainer"]
margin_left = 890.0
margin_top = 505.0
margin_right = 1030.0
margin_bottom = 575.0
custom_constants/margin_right = 30
custom_constants/margin_top = 20

[node name="score" type="RichTextLabel" parent="ColorRect/CenterContainer/MarginContainer"]
margin_top = 20.0
margin_right = 110.0
margin_bottom = 70.0
rect_min_size = Vector2( 110, 50 )
custom_colors/default_color = Color( 0.501961, 0, 0.223529, 1 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]120"
text = "120"
scroll_active = false

[node name="ScoreTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="EndTimer" type="Timer" parent="."]
one_shot = true

[node name="PointSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
pitch_scale = 0.4

[connection signal="timeout" from="ScoreTimer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="EndTimer" to="." method="_on_EndTimer_timeout"]
